Fixed sizing issues with text on mobile sizes

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -14,5 +14,5 @@ nav.navbar.navbar-default {
 .text{
   color: #f7e290 !important;
   font-family: 'Raleway', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
 }
